[gd_scene load_steps=4 format=3 uid="uid://ci5rgbwmnp5cr"]

[ext_resource type="Script" path="res://scripts/inventory/fish_item.gd" id="1_vgcsd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.25, 0.4, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.05, 0.15, 0.25, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 0.5)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="FishItem" type="PanelContainer"]
custom_minimum_size = Vector2(130, 160)
offset_right = 130.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_vgcsd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="FishImageContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="FishTexture" type="Control" parent="MarginContainer/VBoxContainer/FishImageContainer"]
layout_mode = 2

[node name="CountBadge" type="PanelContainer" parent="MarginContainer/VBoxContainer/FishImageContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/FishImageContainer/CountBadge"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="WeightLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Weight: 0.0 kg"
horizontal_alignment = 1

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Value: $0"
horizontal_alignment = 1

[node name="ReleaseButton" type="Button" parent="MarginContainer/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Release" 